--- a/service1/application-dev.yml
+++ b/service1/application-dev.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka/ #http://192.168.0.100:8761/eureka/
+      defaultZone: ${EUREKA_SERVER_URL} #http://192.168.0.100:8761/eureka/
   instance:
     prefer-ip-address: false #true
     hostname: service1 #192.168.0.100
