--- a/service2/application.yml
+++ b/service2/application.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka/ #http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVER_URL} #http://localhost:8761/eureka/
